objects/Wave_Custom_Obj__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WaveCustObject</relationshipLabel>
        <relationshipName>WaveCustObject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Name__c</fullName>
        <label>Test Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_Amount__c</fullName>
        <label>Wave Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Wave Custom Obj1</label>
    <nameField>
        <label>Wave Custom Obj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WaveCustObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>